--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     <div class="root"></div>
 
+       <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+     <script async defer type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAZlvbuwYbLlZ0kU8-uM2W-Uc0rJ6sZh0&callback"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYFSOFfx1vA-RGbnTVVSu6pQmqdXu1-hc"></script>
+
     <script src="js/vendor/gmaps.min.js"></script>
 
     <script src="js/utils/get-json.js"></script>
