--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gas Finder</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/gfl.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/gfl.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
